# scrape_task

./: .gitignore  Makefile  README.md  pyproject.toml  scrape_reddit.py  scrape_twitter.py  session.tw_session  twitter_sign_in.py
.github/workflows/: scrape_reddit.yml  scrape_reddit.yml.old  scrape_twitter.yml
data/reddit/: raw_posts_wallstreetbets.json
data/twitter/: raw_tweets_BTC.json  raw_tweets_doge.json  raw_tweets_elonmusk.json  simple_tweets_BTC.json  simple_tweets_doge.json  simple_tweets_elonmusk.json
docs/: docs.md  task.md
